fix: remove extra padding of the container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,6 @@ a:hover {
 
 .container {
   padding: 0.5em ;
-  width: 75%;
   box-shadow: 0 0 45px #888888;
 }
 
